Checks if the extra exists in the starting intent in JokeActivity before grabbing the joke string from the extra. If the JOKE_EXTRA isn't present, assigns a "Sorry, no joke" string message to the joke string which is displayed in the TextView.

--- a/androidjokes/src/main/res/values/strings.xml
+++ b/androidjokes/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidJokes</string>
+    <string name="sorry_no_joke">Sorry, I\'ve got no joke to show you!</string>
 </resources>
